hor. scroll issue fixed on small devices on about page

--- a/devLabFirstHw/styles/about.css
+++ b/devLabFirstHw/styles/about.css
@@ -82,4 +82,11 @@ p{
 	width: 80%;
     justify-self: center;
 }
+
+}
+
+@media (max-width: 430px){
+	.quote p::after{
+    font-size: 25rem;
+}
 }
